configs_synology_diskstation_ds414/iptables-save_jul_2016
# Generated by iptables-save v1.6.0 on Sun Jul  3 15:28:59 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [59:9932]
:DOS_PROTECT - [0:0]
:FORWARD_FIREWALL - [0:0]
:INPUT_FIREWALL - [0:0]
-A INPUT -j DOS_PROTECT
-A INPUT -j INPUT_FIREWALL
-A FORWARD -j FORWARD_FIREWALL
-A DOS_PROTECT -i eth1 -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j RETURN
-A DOS_PROTECT -i eth1 -p icmp -m icmp --icmp-type 8 -j DROP
-A DOS_PROTECT -i eth1 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j RETURN
-A DOS_PROTECT -i eth1 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -j DROP
-A DOS_PROTECT -i eth1 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 10000/sec --limit-burst 100 -j RETURN
-A DOS_PROTECT -i eth1 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A DOS_PROTECT -i eth0 -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j RETURN
-A DOS_PROTECT -i eth0 -p icmp -m icmp --icmp-type 8 -j DROP
-A DOS_PROTECT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j RETURN
-A DOS_PROTECT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -j DROP
-A DOS_PROTECT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 10000/sec --limit-burst 100 -j RETURN
-A DOS_PROTECT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A FORWARD_FIREWALL -i lo -j ACCEPT
-A FORWARD_FIREWALL -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD_FIREWALL -p udp -m multiport --sports 65001,5004,5002 -j RETURN
-A FORWARD_FIREWALL -p tcp -m multiport --dports 80,443,50002,50001,9025:9040 -j RETURN
-A FORWARD_FIREWALL -p udp -m multiport --dports 1900,65001,5004,5002 -j RETURN
-A FORWARD_FIREWALL -p tcp -m multiport --dports 873,631,515,3260,3261,3262,21 -j DROP
-A FORWARD_FIREWALL -p tcp -m multiport --dports 548,443,80,3493,3306,22,23 -j DROP
-A FORWARD_FIREWALL -p udp -m multiport --dports 68,67,123,514,19999,5353,161 -j DROP
-A FORWARD_FIREWALL -p tcp -m multiport --dports 111,892,2049 -j DROP
-A FORWARD_FIREWALL -p udp -m multiport --dports 111,892,2049 -j DROP
-A FORWARD_FIREWALL -s 192.168.0.0/16 -j RETURN
-A FORWARD_FIREWALL -j DROP
-A FORWARD_FIREWALL -i eth0 -j DROP
-A FORWARD_FIREWALL -i eth1 -j RETURN
-A INPUT_FIREWALL -i lo -j ACCEPT
-A INPUT_FIREWALL -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT_FIREWALL -p udp -m multiport --sports 65001,5004,5002 -j RETURN
-A INPUT_FIREWALL -p tcp -m multiport --dports 80,443,50002,50001,9025:9040 -j RETURN
-A INPUT_FIREWALL -p udp -m multiport --dports 1900,65001,5004,5002 -j RETURN
-A INPUT_FIREWALL -p tcp -m multiport --dports 873,631,515,3260,3261,3262,21 -j DROP
-A INPUT_FIREWALL -p tcp -m multiport --dports 548,443,80,3493,3306,22,23 -j DROP
-A INPUT_FIREWALL -p udp -m multiport --dports 68,67,123,514,19999,5353,161 -j DROP
-A INPUT_FIREWALL -p tcp -m multiport --dports 111,892,2049 -j DROP
-A INPUT_FIREWALL -p udp -m multiport --dports 111,892,2049 -j DROP
-A INPUT_FIREWALL -s 192.168.0.0/16 -j RETURN
-A INPUT_FIREWALL -j DROP
-A INPUT_FIREWALL -i eth0 -j DROP
-A INPUT_FIREWALL -i eth1 -j RETURN
COMMIT
# Completed on Sun Jul  3 15:28:59 2016
